[workspace]

[package]
name = "gooey"
version = "0.1.3"
edition = "2021"
description = "A wgpu-powered graphical user interface (GUI) library with a reactive data model"
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "widgets", "reactive"]
categories = ["gui"]
readme = "./README.md"
rust-version = "1.70.0"

[features]
default = ["tracing-output", "roboto-flex"]
tracing-output = ["dep:tracing-subscriber"]
roboto-flex = []

[dependencies]
# kludgine = { version = "0.6.1", features = ["app"] }
kludgine = { git = "https://github.com/khonsulabs/kludgine", features = [
    "app",
] }
alot = "0.3"
interner = "0.2.1"
kempt = "0.2.1"
intentional = "0.1.0"
tracing = "0.1.40"

tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }
palette = "0.7.3"
ahash = "0.8.6"
gooey-macros = { version = "0.1.0", path = "gooey-macros" }
arboard = "3.2.1"
zeroize = "1.6.1"
unicode-segmentation = "1.10.1"


# [patch.crates-io]
# kludgine = { path = "../kludgine" }
# appit = { path = "../appit" }
# figures = { path = "../figures" }
# alot = { git = "https://github.com/khonsulabs/alot" }
# kempt = { path = "../objectmap" }

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
pollster = "0.3.0"
rand = "0.8.5"
image = { version = "0.24.7", features = ["png"] }

[profile.release]
# debug = true
# opt-level = "s"
# strip = "debuginfo"
