[workspace]
members = ["cushy-macros", "guide/guide-examples"]

[package]
name = "cushy"
version = "0.2.0"
edition = "2021"
description = "A wgpu-powered graphical user interface (GUI) library with a reactive data model"
repository = "https://github.com/khonsulabs/cushy"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "widgets", "reactive"]
categories = ["gui"]
readme = "./README.md"
rust-version = "1.70.0"

[features]
default = ["tracing-output", "roboto-flex"]
tracing-output = ["dep:tracing-subscriber"]
roboto-flex = []

[dependencies]
# kludgine = { version = "0.7.0", features = ["app"] }
kludgine = { git = "https://github.com/khonsulabs/kludgine", features = [
    "app",
] }
figures = "0.2.1"
alot = "0.3"
interner = "0.2.1"
kempt = "0.2.1"
intentional = "0.1.0"
tracing = "0.1.40"

tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }
palette = "0.7.3"
ahash = "0.8.6"
cushy-macros = { version = "0.2.0", path = "cushy-macros" }
arboard = "3.2.1"
zeroize = "1.6.1"
unicode-segmentation = "1.10.1"
pollster = "0.3.0"
png = "0.17.10"
image = { version = "0.24.7", features = ["png"] }


# [patch.crates-io]
# kludgine = { path = "../kludgine" }
# appit = { path = "../appit" }
# figures = { path = "../figures" }
# alot = { git = "https://github.com/khonsulabs/alot" }
# kempt = { path = "../objectmap" }

# [patch."https://github.com/khonsulabs/kludgine"]
# kludgine = { path = "../kludgine" }
# [patch."https://github.com/khonsulabs/appit"]
# appit = { path = "../appit" }
# [patch."https://github.com/khonsulabs/figures"]
# figures = { path = "../figures" }

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
rand = "0.8.5"

[profile.release]
# debug = true
# opt-level = "s"
# strip = "debuginfo"
