[package]
name = "gooey-core"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Core functionality for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
stylecs = { git = "https://github.com/khonsulabs/stylecs.git", branch = "main" }
flume = "0.10"
palette = "0.6"
log = "0.4"
url = "2"
parking_lot = "0.11"
