[package]
name = "cushy-macros"
version = "0.2.0"
edition = "2021"
description = "Macros for the Cushy GUI framework"
repository = "https://github.com/khonsulabs/cushy"
license = "MIT OR Apache-2.0"
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.8.1"
manyhow = "0.10.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
quote-use = "0.8.0"
syn = "2.0.39"

[dev-dependencies]
insta = "1.34.0"
prettyplease = "0.2.15"
