[package]
name = "gooey-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attribute-derive = "0.8.1"
manyhow = "0.10.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
quote-use = "0.7.2"
syn = "2.0.39"

[dev-dependencies]
insta = "1.34.0"
prettyplease = "0.2.15"
