[package]
name = "gooey"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A cross-platform graphical user interface framework"
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../README.md"

[features]
default = ["frontend-kludgine"]
frontend-browser = ["gooey-browser", "gooey-widgets/frontend-browser"]
frontend-kludgine = [
    "gooey-kludgine",
    "gooey-rasterizer",
    "gooey-widgets/frontend-rasterizer",
    "platforms",
]
async = ["tokio", "wasm-bindgen-futures"]

[dependencies]
gooey-rasterizer = { path="../frontends/rasterizer", version="0.1.0-dev.0", optional=true }
gooey-browser = { path="../frontends/browser", version="0.1.0-dev.0", optional=true }
gooey-core = { path="../core", version="0.1.0-dev.0" }
gooey-widgets = { path="../widgets", version="0.1.0-dev.0" }
cfg-if = "1"
platforms = { version="1", optional=true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version="0.4", optional=true }
wasm-bindgen = { version="0.2" }
web-sys = { version="0.3", features=["Window"] }
flume = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version="1", features=["full"], optional=true }
gooey-kludgine = { path="../frontends/renderers/kludgine", version="0.1.0-dev.0", optional=true }

[dev-dependencies]
wasm-bindgen = "0.2"
