[package]
name = "gooey"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A cross-platform graphical user interface framework"
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../README.md"

[features]
default = ["frontend-kludgine", "frontend-browser", "fluent"]
frontend-browser = [
    "gooey-browser",
    "gooey-widgets/frontend-browser",
    "web-sys",
    "wasm-bindgen",
]
frontend-kludgine = [
    "gooey-kludgine",
    "gooey-rasterizer",
    "gooey-widgets/frontend-rasterizer",
    "platforms",
    "image",
    "png",
    "tempfile",
]
async = ["tokio", "wasm-bindgen-futures"]
fluent = ["gooey-fluent"]

[[example]]
name = "basic"
test = true

[[example]]
name = "checkbox"
test = true

[[example]]
name = "layout"
test = true

[[example]]
name = "swapper"

[[example]]
name = "widget-explorer"
test = true

[[example]]
name = "timer"
test = true

[[example]]
name = "fluent-localization"
required-features = ["fluent"]

[dependencies]
gooey-rasterizer = { path = "../frontends/rasterizer", version = "0.1.0-dev.0", optional = true }
gooey-browser = { path = "../frontends/browser", version = "0.1.0-dev.0", optional = true }
gooey-renderer = { path = "../renderer", version = "0.1.0-dev.0" }
gooey-text = { path = "../text", version = "0.1.0-dev.0" }
gooey-core = { path = "../core", version = "0.1.0-dev.0" }
gooey-widgets = { path = "../widgets", version = "0.1.0-dev.0" }
gooey-fluent = { path = "../fluent", version = "0.1.0-dev.0", optional = true }
cfg-if = "1.0.0"
platforms = { version = "2.0.0", optional = true }
image = { version = "0.24.0", default-features = false, optional = true }
png = { git = "https://github.com/image-rs/image-png.git", optional = true }
thiserror = "1.0.30"
tempfile = { version = "3.3.0", optional = true }
sys-locale = "0.1.0"
log = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.29", optional = true }
wasm-bindgen = { version = "0.2.79", optional = true }
web-sys = { version = "0.3.56", features = ["Window"], optional = true }
flume = "0.10.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16.1", features = ["full"], optional = true }
gooey-kludgine = { path = "../frontends/renderers/kludgine", version = "0.1.0-dev.0", optional = true }
kludgine = { version = "0.1.0", default-features = false, features = [
    "multiwindow",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }

[dev-dependencies]
wasm-bindgen = "0.2.79"
log = "0.4.14"
maplit = "1.0.2"
