[package]
name = "gooey-text"
version = "0.1.0-dev.0"
edition = "2018"
description = "Cross-platform text rendering for gooey"
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../README.md"

[dependencies]
gooey-core = { path = "../core", version = "0.1.0-dev.0" }
gooey-renderer = { path = "../renderer", version = "0.1.0-dev.0" }
approx = "0.5"
parking_lot = "0.11"

[target.'cfg(target_arch="wasm32")'.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
