[package]
name = "gooey-widgets"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gooey-core = { path = "../core" }
gooey-kludgine = { path = "../frontends/kludgine" }
gooey-browser = { path = "../frontends/browser" }
kludgine = { path = "../../kludgine" }
