[package]
name = "gooey-widgets"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Common widgets for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../README.md"

[features]
default = []
frontend-rasterizer = ["gooey-rasterizer"]
frontend-browser = ["gooey-browser", "wasm-bindgen", "web-sys"]

[dependencies]
gooey-core = { path = "../core", version = "0.1.0-dev.0" }
gooey-rasterizer = { path = "../frontends/rasterizer", version = "0.1.0-dev.0", optional = true }
gooey-browser = { path = "../frontends/browser", version = "0.1.0-dev.0", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Document",
    "CssStyleSheet",
    "CssRule",
    "Node",
    "HtmlElement",
    "Element",
    "CssStyleDeclaration",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlStyleElement",
    "HtmlHeadElement",
], optional = true }
flume = "0.10"
