[package]
name = "gooey-core"
version = "0.1.0"
edition = "2021"


[features]
web = ["async"]
async = ["gooey-reactor/async"]

[dependencies]
gooey-reactor = { path = "../gooey-reactor" }
gooey-macros = { path = "../gooey-macros" }
stylecs = { git = "https://github.com/khonsulabs/stylecs" }
kempt = "0.2.0"
alot = "0.2.0"
