[package]
name = "gooey-core"
version = "0.1.0"
edition = "2021"


[features]
web = ["async"]
async = ["gooey-reactor/async"]

[dependencies]
gooey-reactor = { workspace = true }
gooey-macros = { workspace = true }
stylecs = { git = "https://github.com/khonsulabs/stylecs" }
kempt = "0.2.0"
alot = "0.3.0"
figures = { git = "https://github.com/khonsulabs/figures" }
palette = "0.7.2"
derive_more = { version = "1.0.0-beta.3", features = [
    "debug",
    "add",
    "add_assign",
    "not",
] }
