[package]
name = "gooey-kludgine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gooey-raster = { workspace = true }
gooey-core = { workspace = true }
# kludgine = { git = "https://github.com/khonsulabs/kludgine" }
kludgine = { git = "https://github.com/ModProg/kludgine", branch = "modifier-access"}
