[package]
name = "gooey-widgets"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dep:gooey-web", "gooey-core/web"]
rasterized = ["dep:gooey-raster"]


[dependencies]
gooey-core = { path = "../gooey-core" }
js-sys = { version = "0.3.61" }
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = { version = "0.4.34" }
futures-util = { version = "*" }
alot = "0.2.0"
console_log = "1.0.0"
log = "0.4"
web-sys = { version = "0.3.61", features = [
    "HtmlButtonElement",
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "CssStyleDeclaration",
] }
gooey-web = { path = "../gooey-web", optional = true }
gooey-raster = { path = "../gooey-raster", optional = true }
stylecs = { git = "https://github.com/khonsulabs/stylecs" }
