[package]
name = "gooey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web", "desktop"]
web = [
    "gooey-widgets/web",
    "gooey-core/web",
    "dep:gooey-web",
    "dep:wasm-bindgen",
]
desktop = ["raster", "dep:gooey-kludgine"]
raster = ["dep:gooey-raster", "gooey-widgets/raster"]

[dependencies]
gooey-core = { workspace = true }
gooey-widgets = { workspace = true }
gooey-web = { workspace = true, optional = true }
gooey-raster = { workspace = true, optional = true }
wasm-bindgen = { version = "*", optional = true }
log = "0.4"
gooey-kludgine = { workspace = true, optional = true }
