[package]
name = "tabbed-document-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
cushy = { path = "../.."}

slotmap = { version = "1.0.7" }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

thiserror = "1.0.65"
image = "0.25.5"
futures = "0.3.31"
async-std = "1.13.0"