[package]
name = "gooey-browser"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A virtual-dom frontend for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../../README.md"


[dependencies]
wasm-bindgen = "0.2"
web-sys = { version="0.3", features=[
    "Document",
    "Node",
    "HtmlElement",
    "Element",
    "CssStyleDeclaration",
    "HtmlButtonElement",
    "HtmlDivElement",
    "CssStyleSheet",
    "StyleSheet",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "HtmlInputElement",
    "MediaQueryList",
    "MediaQueryListEvent",
    "DomTokenList",
    "Window",
    "CssRuleList",
] }
gooey-core = { path="../../core", version="0.1.0-dev.0" }
console_error_panic_hook = "0.1"
log = "0.4.6"
wasm-logger = "0.2.0"
once_cell = "1"
