[package]
name = "gooey-browser"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A virtual-dom frontend for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../../README.md"


[dependencies]
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3.56", features = [
    "Blob",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleSheet",
    "Document",
    "DomTokenList",
    "Element",
    "ErrorEvent",
    "Headers",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlStyleElement",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Node",
    "StyleSheet",
    "Window",
    "KeyboardEvent",
] }
js-sys = "0.3.56"
gooey-core = { path = "../../core", version = "0.1.0-dev.0" }
console_error_panic_hook = "0.1.7"
log = "0.4.14"
wasm-logger = "0.2.0"
once_cell = "1.9.0"
parking_lot = "0.12.0"
