[package]
name = "gooey-kludgine"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gooey-core = { path = "../../core" }
kludgine = { git = "https://github.com/khonsulabs/kludgine.git", branch = "redux" }
