[package]
name = "gooey-rasterizer"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A rasterizing frontend for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../../README.md"

[dependencies]
gooey-core = { path = "../../core", version = "0.1.0-dev.0" }
gooey-renderer = { path = "../../renderer", version = "0.1.0-dev.0" }
winit = { version = "0.25", default-features = false }
image = { version = "0.23", default-features = false, features = [
    "ico",
    "png",
    "jpeg",
] }
parking_lot = "0.11"
platforms = { version = "1" }

[target.'cfg(target_arch="wasm32")'.dependencies]
winit = { version = "0.25", features = ["web-sys"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
winit = { version = "0.25", features = ["x11"] }
