[package]
name = "gooey-kludgine"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A `kludgine`-powered renderer implementation for the `gooey` framework."
repository = "https://github.com/khonsulabs/gooey"
license = "MIT OR Apache-2.0"
keywords = ["gui", "ui", "user interface"]
categories = ["gui"]
readme = "../../../README.md"

[dependencies]
gooey-core = { path = "../../../core", version = "0.1.0-dev.0" }
gooey-widgets = { path = "../../../widgets", version = "0.1.0-dev.0" }
kludgine = { git = "https://github.com/khonsulabs/kludgine.git", branch = "redux" }
