[package]
name = "bonsaidb-counter-client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "The client portion of a simple example using a BonsaiDb server backend."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bonsaidb-counter-shared = { path = "../shared" }
bonsaidb = { version = "0.1.0-dev.4", features = [
    "client",
    "client-websockets",
] }
log = "0.4"
flume = "0.10"
async-trait = "0.1"
anyhow = "1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gooey = { path = "../../../../gooey", default-features = false, features = [
    "frontend-browser",
    "async",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gooey = { path = "../../../../gooey", default-features = false, features = [
    "frontend-kludgine",
    "async",
] }
