[package]
name = "pliantdb-counter-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "The server portion of a simple counter example."
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliantdb-counter-shared = { path="../shared", features=["actionable-traits"] }
pliantdb = { git="https://github.com/khonsulabs/pliantdb.git", branch="wasm-client", features=["server-full"] }
tokio = { version="1", features=["full"] }
anyhow = "1"
actionable = "0.1.0-dev.2"
