[package]
name = "pliantdb-counter-shared"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "The shared types of a simple example using a PliantDb server backend."
license = "MIT OR Apache-2.0"
publish = false

[features]
actionable-traits = []

[dependencies]
serde = { version="1", features=["derive"] }
actionable = "0.1.0-dev.2"
pliantdb = { git="https://github.com/khonsulabs/pliantdb.git", branch="main" }
